Remove CloseButton from FormWidget report page. #184 - Add z-index between 5 and 9 to manage z positioning; - Fix Loading component z-index; - Fix FormWidget field form z-index.

--- a/app/styles/basscss_and_override.scss
+++ b/app/styles/basscss_and_override.scss
@@ -139,6 +139,13 @@ h1, h2, h3, h4, h5, h6 {
 // Additional Layouts
 .content-box { box-sizing: content-box; }
 
+// Z-Index
+.z5 { z-index: 5 }
+.z6 { z-index: 6 }
+.z7 { z-index: 7 }
+.z8 { z-index: 8 }
+.z9 { z-index: 9 }
+
 // Padding
 .p5  { padding        : $space-5; padding-right : $space-5; }
 .px5 { padding-left   : $space-5; padding-right : $space-5; }
